crates/templates/tests/snapshots/run_test__impl-11.snap
---
source: crates/templates/tests/run_test.rs
description: Run function with a root command
expression: output
---

run() {
  declare -A args=()
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  root
}

