crates/templates/tests/snapshots/run_test__impl-13.snap
---
source: crates/templates/tests/run_test.rs
description: Global dependencies are used only for the root command if the use-global-deps-for-root rule is set
expression: output
---
run() {
  declare -A args=()
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
}

