crates/templates/tests/snapshots/run_test__impl-14.snap
---
source: crates/templates/tests/run_test.rs
description: Script has an documented environment variable
expression: output
---

run() {
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  

  printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Nothing to do. Please add" "commands or a root command" >&2
  usage >&2
  exit 1
}

