crates/templates/tests/snapshots/run_test__impl-18.snap
---
source: crates/templates/tests/run_test.rs
description: Script has an environment variable that should be set on an option
expression: output
---
run() {
  declare -A args=()
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  # Check global environment variables
  
  if [[ -n "${FOO:-}" ]]; then
    args['foo']="${FOO:-}"
  fi

}

