crates/templates/tests/snapshots/run_test__impl-3.snap
---
source: crates/templates/tests/run_test.rs
description: Run function with multiple commands and a default value
expression: output
---
run() {
  declare -A args=()
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  # Call the right command action
  case "$action" in
    "bar")
      bar
      exit
      ;;
    "baz")
      baz
      exit
      ;;
    "foo")
      foo
      exit
      ;;
  esac
}

