crates/templates/tests/snapshots/run_test__impl-4.snap
---
source: crates/templates/tests/run_test.rs
expression: output
---
run() {
  declare -A args=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  # Rule `no-first-option-help`: Render the global or command usage if the `-h|--help` option is
  #                              is provided anywhere on the command, not just as the first option.
  #                              Handling the case where no action was selected.
  if [[ -n "${args['--help']}" ]] && [[ -z "$action" ]]; then
    usage
    exit 0
  fi
  # Global script code
  API_KEY="${API_KEY:-}"
  API_SECRET="${API_SECRET:-}"
  echo lorem ipsum
  # Call the right command action
  case "$action" in
    "bar")
      parse_bar_arguments "${input[@]}"
      shift $#
      bar
      ;;
  
    "baz")
      parse_baz_arguments "${input[@]}"
      shift $#
      baz
      ;;
  
    "foo")
      parse_foo_arguments "${input[@]}"
      shift $#
      foo
      ;;
  esac
}

